# basecamp-openapi

./: README.md  compose.yml
nginx/: nginx.conf
schema/: schema.yaml
sdk/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/python/.github/workflows/: python.yml
sdk/python/.openapi-generator/: FILES
sdk/python/basecamp4_python_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/python/basecamp4_python_sdk/api/: __init__.py  default_api.py
sdk/python/basecamp4_python_sdk/models/: __init__.py  account.py  authorization.py  bucket.py  card_create_request.py  card_move_request.py  card_table.py  card_table_card.py  card_table_column.py  card_update_request.py  company.py  dock_item.py  identity.py  person.py  project.py
sdk/python/docs/: Account.md  Authorization.md  Bucket.md  CardCreateRequest.md  CardMoveRequest.md  CardTable.md  CardTableCard.md  CardTableColumn.md  CardUpdateRequest.md  Company.md  DefaultApi.md  DockItem.md  Identity.md  Person.md  Project.md
sdk/python/test/: test_account.py  test_authorization.py  test_bucket.py  test_card_create_request.py  test_card_move_request.py  test_card_table.py  test_card_table_card.py  test_card_table_column.py  test_card_update_request.py  test_company.py  test_default_api.py  test_dock_item.py  test_identity.py  test_person.py  test_project.py
